fixed bug where carousel controls showing on smaller screens

--- a/app/assets/stylesheets/partials/_carousels.css.scss
+++ b/app/assets/stylesheets/partials/_carousels.css.scss
@@ -27,6 +27,9 @@
 		// margin-bottom: 50px;
 		@media (max-width: $screen-sm-max) {
 			display: none;
+			a{
+				display: none;
+			}
 		}
 		a{
 			background: rgba(20,20,20,0.5);
